# wa-tracker

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
.github/workflows/: deploy.yml
backend/: main.py  pyproject.toml
backend/app/: config.py  database.py  poller.py  waha_client.py
backend/app/routers/: actions.py  contacts.py  stats.py
backend/app/services/: media.py  sync_service.py  urgency.py
backend/tests/: conftest.py  test_api.py  test_database.py  test_sync_service.py  test_urgency.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.test.ts  client.ts
frontend/src/components/: ContactList.tsx  ContactModal.tsx  ContactRow.tsx  DismissButton.test.tsx  DismissButton.tsx  EmptyState.test.tsx  EmptyState.tsx  MessageThread.test.tsx  MessageThread.tsx  QRSetup.tsx  StatsBar.tsx
frontend/src/hooks/: useContacts.ts  useMessages.ts
frontend/src/test/: setup.ts
frontend/src/types/: index.ts
frontend/src/utils/: time.test.ts  time.ts
