[tool.poetry]
package-mode = false

[project]
name = "wa-tracker-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.0,<1.0.0)",
    "uvicorn[standard] (>=0.34.0,<1.0.0)",
    "pydantic (>=2.10.0,<3.0.0)",
    "pydantic-settings (>=2.7.0,<3.0.0)",
    "httpx (>=0.28.0,<1.0.0)",
    "aiosqlite (>=0.21.0,<1.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-asyncio = "^1.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
